apps/emojivoto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emojivoto-ingress
  namespace: emojivoto
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  ingressClassName: nginx
  rules:
    - host: emojivoto.local.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-svc
                port:
                  number: 80
